facet-args/src/schema/snapshots/facet_args__schema__tests__snapshot_schema_top_level_enum.snap
---
source: facet-args/src/schema/tests.rs
expression: stripped
---
Error: top-level shape must be a struct
   ╭─[ <unknown>:1:1 ]
   │
 1 │ ╭─▶ #[derive(Facet)]
   ┆ ┆   
 3 │ │   enum TopLevelEnum {
   │ │        ──────┬─────  
   │ │              ╰─────── defined at facet-args/src/schema/tests.rs:135
   ┆ ┆   
 5 │ ├─▶ }
   │ │   ┬  
   │ │   ╰── end of definition
   │ │      
   │ ╰────── top-level shape must be a struct
───╯
